@@ -16,21 +16,22 @@
 set -e
 unset CDPATH
 
-if [ "$#" -lt 2 ]; then
-  echo "Usage: $0 <instance-id> <table-names-as-args>"
+#####################
+# Initial variables #
+#####################
+
+if [[ -z $1 ]]; then
+  echo "Usage: $0 <instance-id>"
   exit 1
 fi
 
-SCRIPTS_DIR=$(cd "$(dirname "$0")" && cd .. && pwd)
+INSTANCE_ID=$1
+
+SCRIPTS_DIR=$(cd "$(dirname "$0")" && cd ../.. && pwd)
 
 TEMPLATE_DIR=${SCRIPTS_DIR}/templates
 JAR_DIR=${SCRIPTS_DIR}/jars
 
 VERSION=$(cat "${TEMPLATE_DIR}/version.txt")
 
-echo "-------------------------------------------------------"
-echo "Forcing compaction job creation"
-echo "-------------------------------------------------------"
-java -cp "${JAR_DIR}/clients-${VERSION}-utility.jar" \
-  --add-opens java.base/java.nio=ALL-UNNAMED \
-  sleeper.clients.compaction.CreateCompactionJobsClient ALL "$@"
+java -cp "${JAR_DIR}/clients-${VERSION}-utility.jar" sleeper.clients.deploy.PauseSystem "${INSTANCE_ID}"
